Fix dd overflow issue

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -118,6 +118,7 @@ dd {
   float: left;
   width: 100%;
   margin-bottom: 1em;
+  overflow-wrap: break-word;
 }
 
 ul,
